--- a/package.json
+++ b/package.json
@@ -24,8 +24,8 @@
 		
 	},
 	"devDependencies": {
-		"coffee-script": "^1.7.1",
-		"mocha": "^1.12.0"
+		"coffee-script": "1.7.1",
+		"mocha": "1.21.0"
 	},
 	"engines": {
 		"node": ">=0.6"
